VSKEL-7 Install empari-material-kit #done #time 3h

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,1 +1,3 @@
 @import "~bootstrap/dist/css/bootstrap.min.css"; // CORE
+@import "~empari-material-kit/app/fonts/iconfont/material-icons.css"; // CORE
+@import "~empari-material-kit/app/styles/main.scss"; // CORE
